# ValidateAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASES.md  main.py  pyproject.toml  streamlit_ui.py  test.py
.github/workflows/: ci.yml
artifacts/2026-05-12/run_20260512_192432/: generated_sql.sql
artifacts/2026-05-12/run_20260512_192842/: report_node.json
artifacts/2026-05-12/run_20260512_194251/: parsed_input.json
artifacts/2026-05-12/run_20260512_194916/: validator_node.txt
artifacts/2026-05-12/run_20260512_195308/: validator_node.txt
artifacts/2026-05-12/run_20260512_195328/: raw_llm_output.txt
artifacts/2026-05-12/run_20260512_195524/: comparison_result.json  db_data.json  report_node.json
artifacts/2026-05-13/run_20260513_090811/: comparison_result.json  generated_sql.sql  raw_llm_output.txt  report_node.json  validator_node.json
artifacts/2026-05-13/run_20260513_091517/: report_node.json  ui_data.json
artifacts/2026-05-13/run_20260513_092609/: comparison_result.json  db_data.json  execution_plan.json  raw_llm_output.txt  report_node.json
artifacts/2026-05-13/run_20260513_093104/: raw_llm_output.txt  ui_data.json  validator_node.json
artifacts/2026-05-13/run_20260513_093727/: comparison_result.json  db_data.json  generated_sql.sql  report_node.json
artifacts/2026-05-13/run_20260513_094343/: raw_llm_output.txt
artifacts/2026-05-13/run_20260513_094438/: comparison_result.json  db_data.json  raw_llm_output.txt  report_node.json  validator_node.json
artifacts/2026-05-13/run_20260513_095420/: comparison_result.json  db_data.json  generated_sql.sql  raw_llm_output.txt  report_node.json  ui_data.json  validator_node.json
docs/prompts/: example_user_prompts.md  input_node_prompts.md  sql_generator_node_prompts.md
prompts/v1/: input_node.txt  sql_generation.txt
src/agents/: __init__.py  graph_builder.py
src/agents/graph/: state.py
src/agents/graph/nodes/: __init__.py  comparison_node.py  db_query_node.py  input_node.py  input_planner.py  planner_node.py  report_node.py  sql_generation_node.py  ui_node.py  validator_node.py
src/config/: __init__.py  db_settings.py  llm_settings.py  settings.py  tableau_settings.py
src/db/: __init__.py  connection.py  models.py  seed.py
src/endpoints/: main.py
src/llm/: __init__.py  groq_config.py  llm_provider.py
src/schemas/: __init__.py  agent_state.py  api_schema.py  comparison_schema.py  input_node.py  planner_node.py  report_schema.py
src/tests/: test_prompts.py
src/tools/: __init__.py  sql_executor.py  streamlit_ui.py  tableau_scraper.py
src/utils/: __init__.py  artifact_manager.py  normalization.py  prompt_loader.py  sql_builder.py  sql_refiner.py
src/utils/constants/: metrics.py
